# hh

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PRE_COMMIT_VALIDATION.md  README.md  build_gui.bat  build_tests_only.bat  build_ui_test.bat  format-code.ps1  imgui.ini  lint.bat  lint_design.py  pre-commit-hook-example  run_cppcheck.bat  test_clang_format.sh  test_pre_commit.bat  vcpkg.json
.github/workflows/: ci.yml
doc/: BUILD_SCRIPT_FIXES.md  FINDING_TESTS.md  NAVIGATOR_INTEGRATION.md  NAVIGATOR_QUICK_FILTERS.md  SIDE_ENCODING_FIX.md  UI_TEST_BUILD_FIX.md
imgui_adv/: CMakeLists.txt  README.md  build.bat
imgui_adv/host/: CMakeLists.txt  imgui_host.cpp  main.cpp  mpsc.h  platform.h
imgui_adv/include/: api.h
imgui_adv/plugin/: md_plugin.cpp
imgui_basic/: build.bat  build_navigator_test.bat  dx11_renderer.h  imgui.ini  main.cpp  navigator.cpp  navigator.h  navigator_test.cpp  navigator_test_helper.cpp  navigator_test_helper.h  order_blotter.cpp  order_blotter.h
imgui_basic/test/: run_tests.bat
imgui_basic/test/navigator/: README.md  build_navigator_test.bat  imgui.ini  navigator_test.cpp  navigator_test_helper.cpp  navigator_test_helper.h  run_tests.bat
imgui_basic/test/order_blotter/: README.md  build_order_blotter_test.bat  order_blotter_test.cpp  order_blotter_test_helper.cpp  order_blotter_test_helper.h  run_tests.bat
imgui_opengl_glad/: .clang-tidy  CMakeLists.txt  IMGuiComponentList.cpp  IMGuiComponents.cpp  IMGuiComponents.h  MarketDataTable.cpp  MarketDataTable.h  TradingContext.h  build.bat  build_and_test.bat  build_gui.bat  build_tests_only.bat  data_updater.h  imgui.ini  imgui_opengl3_glad.cpp  lint.bat  main.cpp  main_context.h  mpsc.h  platform.h
imgui_opengl_glad/core/: data_updater.cpp  data_updater.h  main_context.h  mpsc.h  platform.h
imgui_opengl_glad/include/: md_api.h
imgui_opengl_glad/plugins/: CMakeLists.txt  md_plugin.cpp
imgui_opengl_glad/tests/: CMakeLists.txt  README.md
imgui_opengl_glad/tests/guitests/: APP_TESTING.md  CMakeLists.txt  NAVIGATOR_TESTS.md  QUICK_REFERENCE.md  README.md  STATUS.md  TESTING_SUCCESS.md  app_gui_test.cpp  build_simple_test.bat  imgui.ini  run_cinematic.bat  run_fast.bat  run_headless.bat  run_test.bat  simple_gui_test.cpp  simple_gui_test_main.cpp  simple_imconfig.h
imgui_opengl_glad/tests/unittests/: simple_test.cpp  test_data_updater.cpp
imgui_opengl_glad/ui/: IMGuiComponents.cpp  IMGuiComponents.h  MarketDataTable.cpp  MarketDataTable.h  Navigator.cpp  Navigator.h
win32_basic/: build.bat  win32_basic.c  win32_basic.sln  win32_basic.vcxproj
